@@ -2,6 +2,7 @@ Deluge 0.9.09 - "1.0.0_RC9" (In Development)
  GtkUI:
   * Fix add torrent dialog closing preventing another dialog from being shown
   * Fix various issues when not using English
+  * Fix fastresume issue causing loss of data
 
 Deluge 0.9.08 - "1.0.0_RC8" (27 August 2008)
  Core:
